# yasmines-team

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AUTOBOUND_TEST_REPORT.md  CLAUDE.md  GMAIL_LIVE_TESTING_SUMMARY.md  GMAIL_TESTING_QUICK_START.md  GOOGLE_DOCS_DOMAIN_DELEGATION_VERIFIED.md  GOOGLE_DOCS_LIVE_API_RESULTS.md  GOOGLE_DOCS_LIVE_API_TESTING.md  GOOGLE_DRIVE_AUTHENTICATION_GUIDE.md  GOOGLE_DRIVE_FINAL_SUMMARY.md  GOOGLE_DRIVE_IMPLEMENTATION_SUMMARY.md  GOOGLE_DRIVE_OAUTH_SETUP.md  GOOGLE_DRIVE_PRODUCTION_SETUP.md  GOOGLE_DRIVE_TESTING_GUIDE.md  GOOGLE_DRIVE_TESTING_STATUS.md  INTEGRATIONS_PRIORITY_MAP.md  LIVE_API_TESTING_INSTRUCTIONS.md  LIVE_API_TEST_RESULTS.md  LIVE_TESTING_SUMMARY.md  QUICK_REFERENCE.md  QUICK_TEST_REFERENCE.md
app/backend/: .env.example  GMAIL_API_SETUP.md  GMAIL_SETUP.md  GOOGLE_DRIVE_API_SETUP.md  GOOGLE_WORKSPACE_DELEGATION_SETUP.md  Makefile  README.md  alembic.ini  demo_todoist.py  demo_todoist_comprehensive.py  pyproject.toml  test_gmail_credentials.py  test_gmail_delegation.py
app/backend/__tests__/: TELEGRAM_ENDPOINT_COVERAGE.md  conftest.py
app/backend/__tests__/fixtures/: airtable_fixtures.py  anymailfinder_fixtures.py  apify_fixtures.py  approval_fixtures.py  autobound_fixtures.py  brave_fixtures.py  cal_com_fixtures.py  campaign_setup_fixtures.py  clickup_fixtures.py  company_research_fixtures.py  email_sending_fixtures.py  exa_fixtures.py  fathom_fixtures.py  findymail_fixtures.py  firecrawl_fixtures.py  gmail_fixtures.py  gohighlevel_fixtures.py  google_calendar_fixtures.py  google_contacts_fixtures.py  google_docs_fixtures.py  google_drive_fixtures.py  google_meet_fixtures.py  google_sheets_fixtures.py  google_tasks_fixtures.py  heyreach_fixtures.py  instantly_fixtures.py  live_test_data.py  niche_research_fixtures.py  notion_fixtures.py  pandadoc_fixtures.py  persona_research_fixtures.py  reoon_fixtures.py  serp_api_fixtures.py  serper_fixtures.py  tavily_fixtures.py  todoist_fixtures.py  tomba_fixtures.py
app/backend/__tests__/integration/: DELEGATION_TEST_REPORT.json  EXA_ENDPOINT_INVENTORY.json  EXA_TEST_README.md  EXA_TEST_REPORT.md  LIVE_TEST_REPORT.json  TEST_REPORT_FATHOM.md  TEST_REPORT_GOOGLE_DRIVE.md  TEST_REPORT_gmail.md  TEST_REPORT_gohighlevel.md  TEST_REPORT_google_docs.md  TEST_REPORT_google_docs_new.md  TEST_REPORT_google_sheets.md  cleanup_drive_storage.py  conftest.py  demo_interactive_approval.py  demo_telegram_messages.py  fathom_endpoint_inventory.json  gmail_endpoint_inventory.json  gohighlevel_endpoint_inventory.json  google_docs_endpoint_inventory.json  google_docs_endpoint_inventory_new.json  google_drive_endpoint_inventory.json  google_drive_endpoint_inventory_updated.json  run_exa_tests.sh  run_gmail_live_tests.py  run_google_drive_live_tests.py  run_interactive_demo.py  test_airtable_live.py  test_anymailfinder_live.py  test_approval_workflow_live.py  test_autobound_live.py  test_brave_live.py  test_clickup_advanced_live.py  test_clickup_comprehensive.py  test_clickup_live.py  test_database_approval.py  test_exa_live.py  test_fathom_complete.py  test_fathom_live.py  test_findymail_live.py  (+27 more)
app/backend/__tests__/integration/agents/: test_research_export_agent_live.py
app/backend/__tests__/integration/cal_com/: __init__.py  conftest.py  test_live_api.py  test_live_endpoints.py
app/backend/__tests__/integration/google_calendar/: __init__.py  conftest.py  test_live_api.py
app/backend/__tests__/integration/google_contacts/: __init__.py  test_google_contacts_live.py
app/backend/__tests__/integration/google_drive/: README.md  __init__.py  conftest.py  (+2 more)
app/backend/config/: credentials_loader.py
app/backend/docs/: APPROVAL_API.md  APPROVAL_EXAMPLES.md  APPROVAL_TROUBLESHOOTING.md  APPROVAL_WORKFLOW.md
app/backend/docs/api-endpoints/: perplexity.md
app/backend/scripts/: exchange_oauth_code.py  generate_service_account_token.py  get_google_token.sh  google_oauth2_setup.py  oauth_redirect_server.py
app/backend/src/: config.py
app/backend/src/agents/: approval_agent.py  circuit_breaker.py  exceptions.py  master_workflow_orchestrator.py  phase1_orchestrator.py  phase2_orchestrator.py  phase3_orchestrator.py  retry_utils.py
app/backend/src/database/: __init__.py  connection.py  models.py
app/backend/src/integrations/: __init__.py  airtable.py  anymailfinder.py  apify.py  approval_handler.py  autobound.py  base.py  brave.py  clickup.py  clickup_advanced.py  exa.py  fathom.py  findymail.py  firecrawl.py  gamma.py  gohighlevel.py  heyreach.py  icypeas.py  instantly.py  lead_enrichment.py  mailverify.py  muraena.py  nimbler.py  perplexity.py  quickbooks.py  reddit.py  reoon.py  serp_api.py  serper.py  slack.py  tavily.py  telegram.py  todoist.py  tomba.py  voilanorbert.py
app/backend/src/models/: approval.py  niche_research.py
app/backend/src/services/: __init__.py  approval_bot_runner.py  approval_service.py
app/backend/src/utils/: __init__.py  rate_limiter.py  string_similarity.py
app/backend/tasks/: TASK-LOG.md
(+457 files in other folders)
